<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TabViewPagerActivity!</string>
    <string name="app_name">ZinniplexControl</string>
    <string name="fan">Lüftung </string>
    <string name="volume">Volume: </string>
    <string name="volUp">lauter </string>
    <string name="volDown">leiser </string>
    <string name="listeningMode">Mode: </string>
    <string name="input">Source: </string>
    <string name="onkyo_tx">Onkyo TX-SR 805 Controls</string>
    <string name="mask">Maskierung</string>
    <string name="prevListening">Prev Listening</string>
    <string name="nextListening">Next Listening</string>
    <string name="dimmspots">dimm Spots</string>
    <string name="maskopen">Maskierung auf</string>
    <string name="maskclose">Maskierung zu</string>
    <string name="dimlevelMin">Dimmlevel Dunkel</string>
    <string name="dimlevelMax">Dimmlevel Hell</string>
    <string name="beenden">Beenden</string>

</resources>